cloudformation/Network.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: common networks

Parameters:
  ###############################
  # 外部からのパラメーター
  ###############################
  Env:
    Type: String
    Description: 環境種別
  ServiceName:
    Type: String
    Description: サービス名
  ProductName:
    Type: String
    Description: プロダクト名

  ###############################
  # パラメーター
  ###############################
  VPCName:
    Type: String
    Default: vpc
  InternetGatewayName:
    Type: String
    Default: igw
  PublicSubnetAName:
    Type: String
    Default: public-a
  PublicSubnetCName:
    Type: String
    Default: public-c
  PrivateSubnetAName:
    Type: String
    Default: private-a
  PrivateSubnetCName:
    Type: String
    Default: private-c
  PublicRouteTableAName:
    Type: String
    Default: public-a
  PublicRouteTableCName:
    Type: String
    Default: public-c
  PrivateRouteTableAName:
    Type: String
    Default: private-a
  PrivateRouteTableCName:
    Type: String
    Default: private-c

###############################
# リソース
###############################
Resources:
  ###############################
  # VPC
  ###############################
  ### VPC ###
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.16.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${ProductName}-${ServiceName}-${VPCName}-${Env}
        - Key: ServiceName
          Value: !Ref ServiceName
        - Key: ProductName
          Value: !Ref ProductName
        - Key: Env
          Value: !Ref Env

  ###############################
  # InternetGateway
  ###############################
  ### InternetGateway ###
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProductName}-${ServiceName}-${InternetGatewayName}-${Env}
        - Key: ServiceName
          Value: !Ref ServiceName
        - Key: ProductName
          Value: !Ref ProductName
        - Key: Env
          Value: !Ref Env

  ### VPCGatewayAttachment ###
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  ###############################
  # Subnet
  ###############################
  ### PublicSubnetA ###
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: { "Fn::Select" : ["0", { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] }
      CidrBlock: !Select [ 0, !Cidr [ !GetAtt VPC.CidrBlock, 6, 8 ]]
      Tags:
        - Key: Name
          Value: !Sub ${ProductName}-${ServiceName}-${PublicSubnetAName}-${Env}
        - Key: ServiceName
          Value: !Ref ServiceName
        - Key: ProductName
          Value: !Ref ProductName
        - Key: Env
          Value: !Ref Env
      VpcId: !Ref VPC

  ### PublicSubnetC ###
  PublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: { "Fn::Select" : ["1", { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] }
      CidrBlock: !Select [ 1, !Cidr [ !GetAtt VPC.CidrBlock, 6, 8 ]]
      Tags:
        - Key: Name
          Value: !Sub ${ProductName}-${ServiceName}-${PublicSubnetCName}-${Env}
        - Key: ServiceName
          Value: !Ref ServiceName
        - Key: ProductName
          Value: !Ref ProductName
        - Key: Env
          Value: !Ref Env
      VpcId: !Ref VPC

  ### PrivateSubnetA ###
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: { "Fn::Select" : ["0", { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] }
      CidrBlock: !Select [ 2, !Cidr [ !GetAtt VPC.CidrBlock, 6, 8 ]]
      Tags:
        - Key: Name
          Value: !Sub ${ProductName}-${ServiceName}-${PrivateSubnetAName}-${Env}
        - Key: ServiceName
          Value: !Ref ServiceName
        - Key: ProductName
          Value: !Ref ProductName
        - Key: Env
          Value: !Ref Env
      VpcId: !Ref VPC

  ### PrivateSubnetC ###
  PrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: { "Fn::Select" : ["1", { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] }
      CidrBlock: !Select [ 3, !Cidr [ !GetAtt VPC.CidrBlock, 6, 8 ]]
      Tags:
        - Key: Name
          Value: !Sub ${ProductName}-${ServiceName}-${PrivateSubnetCName}-${Env}
        - Key: ServiceName
          Value: !Ref ServiceName
        - Key: ProductName
          Value: !Ref ProductName
        - Key: Env
          Value: !Ref Env
      VpcId: !Ref VPC

  ###############################
  # RouteTable
  ###############################
  ### PublicRouteTableA ###
  PublicRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProductName}-${ServiceName}-${PublicRouteTableAName}-${Env}
        - Key: ServiceName
          Value: !Ref ServiceName
        - Key: ProductName
          Value: !Ref ProductName
        - Key: Env
          Value: !Ref Env
      VpcId: !Ref VPC

  ### PublicRouteTableC ###
  PublicRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProductName}-${ServiceName}-${PublicRouteTableCName}-${Env}
        - Key: ServiceName
          Value: !Ref ServiceName
        - Key: ProductName
          Value: !Ref ProductName
        - Key: Env
          Value: !Ref Env
      VpcId: !Ref VPC

  ### PrivateRouteTableA ###
  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProductName}-${ServiceName}-${PublicRouteTableCName}-${Env}
        - Key: ServiceName
          Value: !Ref ServiceName
        - Key: ProductName
          Value: !Ref ProductName
        - Key: Env
          Value: !Ref Env
      VpcId: !Ref VPC

  ### PrivateRouteTableC ###
  PrivateRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProductName}-${ServiceName}-${PrivateRouteTableCName}-${Env}
        - Key: ServiceName
          Value: !Ref ServiceName
        - Key: ProductName
          Value: !Ref ProductName
        - Key: Env
          Value: !Ref Env
      VpcId: !Ref VPC

  ### PublicRouteA ###
  PublicRouteA:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTableA

  ### PublicRouteC ###
  PublicRouteC:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTableC

  ### PublicRouteTableAAssociation ###
  PublicSubnetRouteTableAAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableA
      SubnetId: !Ref PublicSubnetA

  ### PublicRouteTableCAssociation ###
  PublicSubnetRouteTableCAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableC
      SubnetId: !Ref PublicSubnetC

  ### PrivateRouteTableAAssociation ###
  PrivateSubnetRouteTableAAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      SubnetId: !Ref PrivateSubnetA

  ### PrivateRouteTableCAssociation ###
  PrivateSubnetRouteTableCAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableC
      SubnetId: !Ref PrivateSubnetC

###############################
# 出力
###############################
Outputs:
  VPCId:
    Value: !Ref VPC
    Export:
      Name: !Sub ${ProductName}-${ServiceName}-${VPCName}-${Env}
  PublicSubnetAId:
    Value: !GetAtt PublicSubnetA.SubnetId
    Export:
      Name: !Sub ${ProductName}-${ServiceName}-${PublicSubnetAName}-${Env}
